# restrict-access-right

./: Makefile  README.md  note
contract/: Cargo.toml
contract/src/: bad.rs  contract.rs  good.rs  main1.rs  main2.rs
tests/: Cargo.toml
tests/src/: integration_tests.rs
tests/wasm/: bad.wasm  contract.wasm  contract1.wasm  contract2.wasm  good.wasm
